--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,3 @@
 @import "./global.css";
-@import "./dashboard";
-@import "./tailwindElements";
+@import "./dashboard.css";
+@import "./tailwindElements.css";
